feat: user-service add swagger
